[package]
name = "extension"
version = "0.1.0"
edition = "2021"
authors = [ "SingleStore" ]
publish = false
readme = "README.md"
repository = "https://github.com/singlestore-labs/singlestore-db-extension-rust-template/"

[dependencies]
fastbloom-rs = "0.5"
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git", rev = "60e3c5b41e616fee239304d92128e117dd9be0a7" }

[lib]
crate-type = ["cdylib"]